# rmlui-app

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  format_sources.sh
projects/lib/rmlui-renderer-opengl33/: CMakeLists.txt
projects/lib/rmlui-renderer-opengl33/include/RmlUi/: RenderOpenGL33.hpp
projects/lib/rmlui-renderer-opengl33/include/RmlUi/details/: RenderOpenGL33.inl
projects/lib/rmlui-renderer-opengl33/include/RmlUi/details/RenderOpenGL33/: Impl.hpp  Impl.inl
projects/lib/skif-rmlui/: CMakeLists.txt
projects/lib/skif-rmlui/include/skif/rmlui/: app.hpp  config.hpp
projects/lib/skif-rmlui/include/skif/rmlui/core/: i_event_loop.hpp  i_window.hpp  i_window_manager.hpp  math_types.hpp  signal.hpp
projects/lib/skif-rmlui/include/skif/rmlui/editor/: editor_descriptor.hpp  i_editor.hpp  i_editor_host.hpp  i_editor_registry.hpp  i_split_layout.hpp  split_node.hpp
projects/lib/skif-rmlui/include/skif/rmlui/input/: i_input_manager.hpp  key_codes.hpp  mouse_buttons.hpp
projects/lib/skif-rmlui/include/skif/rmlui/layout/: i_layout_engine.hpp  layout_node.hpp
projects/lib/skif-rmlui/include/skif/rmlui/plugin/: i_plugin.hpp  i_plugin_manager.hpp  i_plugin_registry.hpp
projects/lib/skif-rmlui/include/skif/rmlui/view/: i_view.hpp  i_view_host.hpp  i_view_registry.hpp  (+2 more)
projects/lib/skif-rmlui/private/RmlUi/: RendererGlad33.hpp
projects/lib/skif-rmlui/private/implementation/: editor_host_impl.hpp  editor_registry_impl.hpp  event_loop_impl.hpp  input_manager_impl.hpp  layout_engine_impl.hpp  panel_container_controller.hpp  plugin_manager_impl.hpp  split_layout_impl.hpp  view_host_impl.hpp  view_registry_impl.hpp  window_context.hpp  window_impl.hpp  window_manager_impl.hpp
projects/lib/skif-rmlui/src/: app.cpp
projects/lib/skif-rmlui/src/RmlUi/: RendererGlad33.cpp
projects/lib/skif-rmlui/src/implementation/: editor_host_impl.cpp  editor_registry_impl.cpp  event_loop_impl.cpp  input_manager_impl.cpp  layout_engine_impl.cpp  panel_container_controller.cpp  plugin_manager_impl.cpp  split_layout_impl.cpp  view_host_impl.cpp  view_registry_impl.cpp  window_impl.cpp  window_manager_impl.cpp
(+18 files in other folders)
